kubernetes/apps/cloudflare/cloudflare-tunnel/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.darkfellanetwork.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app cloudflare-tunnel
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: *app
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toCIDRSet:
        - cidr: 1.1.1.1/32
      toPorts:
        - ports:
            - port: "853"
              protocol: UDP
            - port: "853"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/instance: external-ingress-nginx
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP

    - toCIDRSet:
        - cidr: 103.21.244.0/22
        - cidr: 103.22.200.0/22
        - cidr: 103.31.4.0/22
        - cidr: 104.16.0.0/13
        - cidr: 104.24.0.0/14
        - cidr: 108.162.192.0/18
        - cidr: 131.0.72.0/22
        - cidr: 141.101.64.0/18
        - cidr: 162.158.0.0/15
        - cidr: 172.64.0.0/13
        - cidr: 173.245.48.0/20
        - cidr: 188.114.96.0/20
        - cidr: 190.93.240.0/20
        - cidr: 197.234.240.0/22
        - cidr: 198.41.128.0/17
      toPorts:
        - ports:
            - port: "7844"
              protocol: UDP
    - toCIDRSet:
        - cidr: 103.21.244.0/22
        - cidr: 103.22.200.0/22
        - cidr: 103.31.4.0/22
        - cidr: 104.16.0.0/13
        - cidr: 104.24.0.0/14
        - cidr: 108.162.192.0/18
        - cidr: 131.0.72.0/22
        - cidr: 141.101.64.0/18
        - cidr: 162.158.0.0/15
        - cidr: 172.64.0.0/13
        - cidr: 173.245.48.0/20
        - cidr: 188.114.96.0/20
        - cidr: 190.93.240.0/20
        - cidr: 197.234.240.0/22
        - cidr: 198.41.128.0/17
      icmps:
        - fields:
            - type: 8
              family: IPv4
            - type: 3
              family: IPv4
